updated. forms need work

--- a/views/burger.handlebars
+++ b/views/burger.handlebars
@@ -15,11 +15,12 @@
 	<div class="jumbotron">
 		<h1>Welcome to Burgers Not Boogers.</h1>
 	</div>
+	<div id="messages" class="panel hidden"></div>
 	<div class="row">
 		<div class="col-xs-4" id="left">
 			<div class="panel">
 				<h3>Uneaten Burgers</h3>
-				<table class="table table-bordered table-hover table-responsive">
+				<table id="not-eaten-burgers" class="table table-bordered table-hover table-responsive">
 					<thead>
 						<tr>
 							<th>ID</th>
@@ -71,69 +72,103 @@
 							<th>Who Submitted?</th>
 							<th>When Was It Made?</th>
 							<th>When Was it Eaten?</th>
+							<th>Delete?</th>
 						</tr>
 					</thead>
 					<tbody>
 						{{#each isEaten}}
+						<form>
 						<tr>
 							<td>{{id}}</td>
 							<td>{{burger_name}}</td>
 							<td>{{user_created}}</td>
 							<td>{{created_at}}</td>
 							<td>{{updated_at}}</td>
+							<td>
+								<input type="hidden" name="id" value="{{id}}" data-value="{{id}}">
+								HERE IS THE LATEST STOP ZLZLZLZLZ
+								</td>
 						</tr>
+						</form>
 						{{/each}}
 					</tbody>
 				</table>
 			</div>
-			<script>
-				$(document).ready(function () {
 
-					$(".eatIt").on("click", function (event) {
-						event.preventDefault();
-						var eatTheBurgerID = $(this).data('value');
-						console.log(eatTheBurgerID);
-						if (eatTheBurgerID) {
-							var path = '/eatburger/' + eatTheBurgerID;
-							$.ajax({
-								type: "put",
-								url: path
-							}).done((data) => {
-								alert("Ate that burger!");
-								console.log(data);
-								var burgers = $('#eaten-burgers');
-								//burgers.empty();
-								//burgers.addClass("table table-bordered table-hover table-responsive")
-								var newHead=$('<thead>')
-								newHead.html(
-										$('<tr>').append(
-											$('<th>').text('ID'),
-											$('<th>').text('Burger Name'),
-											$('<th>').text('Who Submitted?'),
-											$('<th>').text('When Was It Made?'),
-											$('<th>').text('When Was It Eaten?')
-										))
-										burgers.html(newHead);
-								//for (var i = 0; i < data.isEaten.length; i++) {
-									var newBody=$('<tbody>')
-								data.isEaten.forEach(child => {
-									newBody.append
-										$('<tbody>').append(
-										$('<tr>').append(
-											$('<td>').text(child.id),
-											$('<td>').text(child.burger_name),
-											$('<td>').text(child.user_created),
-											$('<td>').text(child.created_at),
-											$('<td>').text(child.updated_at)
-										))
-								})
-								burgers.append(newBody);
-							})
-						}
-					});
-				});
-
-
-			</script>
 		</div>
 	</div>
+	<script>
+		$(document).ready(function () {
+
+			function burgerReDraw(data,method) {
+				var burgers = $('#eaten-burgers > tbody');
+				burgers.empty();
+				data.isEaten.forEach(child => {
+					var newRow = $('<tr>')
+					newRow.append(
+						$('<td>').text(child.id),
+						$('<td>').text(child.burger_name),
+						$('<td>').text(child.user_created),
+						$('<td>').text(child.created_at),
+						$('<td>').text(child.updated_at),
+						$('<button>').addClass("btn btn-default deleteBurger").append(
+								$('<i>').addClass("fa fa-window-close").attr({"aria-hidden": "true", "data-value": child.id}))
+					)
+
+					burgers.append(newRow);
+				})
+				var notEatenBurger = $('#not-eaten-burgers > tbody');
+				data.notEaten.forEach(child => {
+					var newNotEatenRow = $('<tr>');
+					newNotEatenRow.append(
+						$('<td>').text(child.id),
+						$('<td>').text(child.burger_name),
+						$('<td>').text(child.user_created),
+						$('<td>').text(child.created_at)
+					)
+					notEatenBurger.html(newNotEatenRow);
+				
+					switch (method) {
+						case "deleted":
+							$('#messages').addClass("active").removeClass("hidden").text("Burger Successfully Deleted")
+							break;
+						case "eat":
+							$('#messages').addClass("active").removeClass("hidden").text("Burger Successfully Eaten")
+					}
+				})
+			}
+
+			$(".eatIt").on("click", function (event) {
+				event.preventDefault();
+				var eatTheBurgerID = $(this).attr('data-value');
+				console.log(eatTheBurgerID);
+				if (eatTheBurgerID) {
+					var path = '/eatburger/' + eatTheBurgerID;
+					$.ajax({
+						type: "put",
+						url: path
+					}).done((data) => {
+						alert("Ate that burger!");
+						burgerReDraw(data,"eat");
+					})
+				}
+			});
+			$(document).on("click",".deleteBurger", function(event) {
+				event.preventDefault();
+				var deleteBurgerID = $(this).attr('data-value');
+				var derpypath = '/' + deleteBurgerID
+				$.ajax({
+					type: "delete",
+					url: derpypath
+				}).done( (data)=>{
+					burgerReDraw(data,"deleted")
+					})
+					//.catch((err) => {
+					//$('#messages').text(err)
+				//})
+
+			});
+
+
+		});
+	</script>
