--- a/views/layout.handlebars
+++ b/views/layout.handlebars
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="https://use.fontawesome.com/a23fdb6623.js"></script>
+ <link rel="stylesheet" href="/css/style.css">
 </body>
 <title>{{title}}</title>
 	
