--- a/views/burger.handlebars
+++ b/views/burger.handlebars
@@ -21,19 +21,16 @@
 					</thead>
 					<tbody>
 						{{#each notEaten}}
-						<form>
 							<tr>
 								<td>{{burger_name}}</td>
 								<td>{{user_created}}</td>
 								<td>{{created_at}}</td>
 								<td>
-									<input type="hidden" name="id" value="{{id}}" data-value="{{id}}">
 									<button class="btn btn-default eatIt" data-value="{{id}}" type="submit">
 										<i class="fa fa-heart" aria-hidden="true" data-value="{{id}}"></i>
 									</button>
 								</td>
 							</tr>
-						</form>
 						{{/each}}
 
 					</tbody>
@@ -64,20 +61,17 @@
 					</thead>
 					<tbody>
 						{{#each isEaten}}
-						<form>
 						<tr>
 							<td>{{burger_name}}</td>
 							<td>{{user_created}}</td>
 							<td>{{created_at}}</td>
 							<td>{{updated_at}}</td>
 							<td>
-								<input type="hidden" name="id" value="{{id}}" data-value="{{id}}">
-								<button class="btn btn-default eatIt" data-value="{{id}}" type="submit">
-										<i class="fa fa-window-close" aria-hidden="true" data-value="{{id}}"></i>
+								<button class="btn btn-default deleteBurger" data-value="{{id}}" type="submit">
+										<i class="fa fa-window-close" aria-hidden="true"></i>
 								</button>
 								</td>
 						</tr>
-						</form>
 						{{/each}}
 					</tbody>
 				</table>
