updated for prod

--- a/views/burger.handlebars
+++ b/views/burger.handlebars
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<div class="col-xs-3" id="center">
-			<form method="POST" role="form" action="/">
+			<form method="POST" role="form" action="/burger">
 				<label for="username">What is your name?</label>
 				<input type="text" id="username" default="Bob" name="user_created" class="form-control">
 				<label for="add-burger">Add A Burger</label>
@@ -79,4 +79,4 @@
 
 		</div>
 	</div>
-<script src="/js/app.js"  type="text/javascript"></script>
+<script src="/burger/js/app.js"  type="text/javascript"></script>
