--- a/views/burger.handlebars
+++ b/views/burger.handlebars
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<div class="col-xs-3" id="center">
-			<form method="POST" role="form" action="/burger">
+			<form>
 				<label for="username">What is your name?</label>
 				<input type="text" id="username" default="Bob" name="user_created" class="form-control">
 				<label for="add-burger">Add A Burger</label>
