--- a/views/burger.handlebars
+++ b/views/burger.handlebars
@@ -43,7 +43,7 @@
 				<input type="text" id="username" default="Bob" name="user_created" class="form-control">
 				<label for="add-burger">Add A Burger</label>
 				<input type="text" id="add-burger" name="burger_name" class="form-control">
-				<button class="btn btn-lg" id="add-burger-button" type="submit">Submit</button>
+				<button class="btn btn-lg addBurger" id="add-burger-button" type="submit">Submit</button>
 			</form>
 		</div>
 		<div class="col-xs-5" id="right">
