--- a/views/burger.handlebars
+++ b/views/burger.handlebars
@@ -1,6 +1,4 @@
-<style>
 
-</style>
 <div class="container">
 	<div class="jumbotron">
 		<h1>Welcome to Burgers Not Boogers.</h1>
@@ -27,7 +25,7 @@
 								<td>{{created_at}}</td>
 								<td>
 									<button class="btn btn-default eatIt" data-value="{{id}}" type="submit">
-										<i class="fa fa-heart" aria-hidden="true" data-value="{{id}}"></i>
+										<i class="fa fa-heart eatIt" aria-hidden="true" data-value="{{id}}"></i>
 									</button>
 								</td>
 							</tr>
@@ -68,7 +66,7 @@
 							<td>{{updated_at}}</td>
 							<td>
 								<button class="btn btn-default deleteBurger" data-value="{{id}}" type="submit">
-										<i class="fa fa-window-close" aria-hidden="true"></i>
+										<i class="fa fa-window-close deleteBurger" aria-hidden="true"></i>
 								</button>
 								</td>
 						</tr>
