--- a/views/burger.handlebars
+++ b/views/burger.handlebars
@@ -1,11 +1,27 @@
-
 <div class="container">
 	<div class="jumbotron">
 		<h1>Welcome to Burgers Not Boogers.</h1>
 	</div>
 	<div id="messages" class="panel hidden"></div>
 	<div class="row">
-		<div class="col-xs-4" id="left">
+		<div class="panel">
+			<div class="col-md-4 col-xs">
+			</div>
+			<div class="col-md-4 col-xs-12">
+				<div id="center">
+					<form>
+						<label for="username">What is your name?</label>
+						<input type="text" id="username" default="Bob" name="user_created" class="form-control">
+						<label for="add-burger">Add A Burger</label>
+						<input type="text" id="add-burger" name="burger_name" class="form-control">
+						<button class="btn btn-lg addBurger" id="add-burger-button" type="submit">Submit</button>
+					</form>
+				</div>
+			</div>
+			<div class="col-md-4 col-xs">
+			</div>
+		</div>
+		<div class="col-xs-6" id="left">
 			<div class="panel">
 				<h3>Uneaten Burgers</h3>
 				<table id="not-eaten-burgers" class="table table-bordered table-hover table-responsive">
@@ -19,32 +35,23 @@
 					</thead>
 					<tbody>
 						{{#each notEaten}}
-							<tr>
-								<td>{{burger_name}}</td>
-								<td>{{user_created}}</td>
-								<td>{{created_at}}</td>
-								<td>
-									<button class="btn btn-default eatIt" data-value="{{id}}" type="submit">
-										<i class="fa fa-heart eatIt" aria-hidden="true" data-value="{{id}}"></i>
-									</button>
-								</td>
-							</tr>
+						<tr>
+							<td>{{burger_name}}</td>
+							<td>{{user_created}}</td>
+							<td>{{created_at}}</td>
+							<td>
+								<button class="btn btn-default eatIt" data-value="{{id}}" type="submit">
+									<i class="fa fa-heart eatIt" aria-hidden="true" data-value="{{id}}"></i>
+								</button>
+							</td>
+						</tr>
 						{{/each}}
 
 					</tbody>
 				</table>
 			</div>
 		</div>
-		<div class="col-xs-3" id="center">
-			<form>
-				<label for="username">What is your name?</label>
-				<input type="text" id="username" default="Bob" name="user_created" class="form-control">
-				<label for="add-burger">Add A Burger</label>
-				<input type="text" id="add-burger" name="burger_name" class="form-control">
-				<button class="btn btn-lg addBurger" id="add-burger-button" type="submit">Submit</button>
-			</form>
-		</div>
-		<div class="col-xs-5" id="right">
+		<div class="col-xs-6" id="right">
 			<div class="panel">
 				<h3>Eaten Burgers</h3>
 				<table id="eaten-burgers" class="table table-bordered table-hover table-responsive">
@@ -66,9 +73,9 @@
 							<td>{{updated_at}}</td>
 							<td>
 								<button class="btn btn-default deleteBurger" data-value="{{id}}" type="submit">
-										<i class="fa fa-window-close deleteBurger" aria-hidden="true"></i>
+									<i class="fa fa-window-close deleteBurger" aria-hidden="true"></i>
 								</button>
-								</td>
+							</td>
 						</tr>
 						{{/each}}
 					</tbody>
@@ -77,4 +84,4 @@
 
 		</div>
 	</div>
-<script src="/burger/js/app.js"  type="text/javascript"></script>
+	<script src="/burger/js/app.js" type="text/javascript"></script>
